--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@aws-sdk/client-s3": "^3.606.0",
     "@aws-sdk/lib-storage": "^3.606.0",
     "@coral-xyz/anchor": "^0.29.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.0",
+    "@mui/material": "^6.3.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@solana/spl-token": "^0.4.7",
