--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-oauth/google": "^0.12.1",
     "@solana/spl-token": "^0.4.7",
     "@solana/spl-token-metadata": "^0.1.4",
     "@solana/wallet-adapter-base": "^0.9.23",
@@ -34,6 +35,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.1",
+    "google-auth-library": "^9.15.0",
     "immer": "^10.1.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.396.0",
@@ -43,6 +46,8 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.4",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
